# rlngine

./: LICENSE  README.md  TODO.md  run.sh  run_linux.sh  run_win.sh
objects/: objects.json  walls.json  walls_no_whitespace.json
src/: .world.cpp.swp  CMakeLists.txt  atlas.cpp  atlas.hpp  color.cpp  color.hpp  component_manager.cpp  component_manager.hpp  components.hpp  entity.hpp  entity_factory.cpp  entity_factory.hpp  entity_manager.cpp  entity_manager.hpp  game.cpp  game.hpp  json.cpp  json.hpp  main.cpp  map.hpp  ui.cpp  ui.hpp  world.cpp  world.hpp  zone.cpp  zone.hpp
src/objects/: walls.json
